--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    width: 350px;
+    width: auto;
 }
 .tabs, .sub-tabs {
     display: flex;
@@ -54,6 +54,7 @@ button {
     background: #28a745;
     color: white;
     border: none;
+    margin: 10px;
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 5px;
@@ -61,4 +62,42 @@ button {
 }
 button:hover {
     background: #218838;
+}
+#qrcode{
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    background-color: white;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: left;
+}
+
+th {
+    background-color: #4CAF50;
+    color: white;
+    font-weight: bold;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+tr:hover {
+    background-color: #ddd;
+}
+
+.container {
+    max-width: 800px;
+    margin: auto;
+    padding: 20px;
+    text-align: center;
 }
